small and medium sizes disabled + bug with modal fixed

--- a/src/styles/colors.styl
+++ b/src/styles/colors.styl
@@ -26,3 +26,7 @@ $btn-border-hover = $color5
 $btn-fg-active = $white
 $btn-bg-active = $color4
 $btn-border-active = $color5
+
+$btn-fg-disabled = $white
+$btn-bg-disabled = #818181
+$btn-border-disabled = $color5
